--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
 
   <groupId>com.github.murkaje</groupId>
   <artifactId>robust-maven-cache</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <properties>
+    <maven.core.version>3.3.1</maven.core.version>
     <maven.resolver.version>1.3.3</maven.resolver.version>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
@@ -40,6 +41,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>${maven.core.version}</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.maven.resolver</groupId>
       <artifactId>maven-resolver-api</artifactId>
