--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.murkaje</groupId>
   <artifactId>robust-maven-cache</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.2</version>
 
   <properties>
     <maven.core.version>3.3.1</maven.core.version>
